--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link/>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link/>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"></link>
-
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Chewy&family=Dancing+Script&family=Great+Vibes&family=Rubik+Moonrocks&family=Rye&family=Satisfy&family=Shrikhand&family=Wallpoet&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
